# mcp_hello_world

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  scratch.py
src/: client.py  server.py
tests/: test_client.py  test_server.py
