[project]
name = "mcp-hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.2.7",
    "langchain>=0.3.25",
    "langchain-mcp-adapters>=0.0.3",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.1",
]
